--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hrid Portfolio</title>
+    <title>Hrid Portfolio | Full Stack Developer</title>
+    <meta name="description" content="Portfolio of Hrid, a Full Stack Developer. Explore my projects and skills." />
+    <meta name="keywords" content="Hrid, Hrid1402, portafolio, portfolio, web developer, full stack, desarrollo full stack" />
+    
+    <meta property="og:title" content="Hrid Portfolio | Full Stack Developer" />
+    <meta property="og:description" content="Portfolio of Hrid, a Full Stack Developer. Explore my projects and skills." />
   </head>
   <body>
     <div id="root"></div>
